Fixed the output